codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3635
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. test-visible-model (current)  test-visible-model description
  2. Switch / connect provider     DeepSeek, GLM, Kimi, HY, MiniMax,
                                   OpenRouter

  Press enter to confirm or esc to go back
