codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__provider_setup_from_reserve.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
assertion_line: 14
expression: "render_bottom_popup(&chat, 90)"
---
  Select Model
  Other models return when ordinary usage is available again.

› 1. GPT-5.6-Luna (current)     Fast and affordable agentic coding model.
  2. Switch / connect provider  DeepSeek, GLM, Kimi, HY, MiniMax, OpenRouter

  Press enter to confirm or esc to go back
